feat: Added Localisation

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,22 +1,21 @@
 <div class="d-flex align-items-center h-100 justify-content-center mb-3">
   <span class="ps-2">
-      <img [src]="logo" alt="" height="50">
+      <img [src]="logo" alt="" height="75">
   </span>
-  <span class="ps-2 h4 text-uppercase d-flex align-items-center">{{ title }}</span>
 </div>
-<h1 id="title" class="title">Forgot Password</h1>
+<h1 id="title" class="title">{{'KTitleForgotPassword' | translate}}</h1>
 <!-- <p class="sub-title">Enter your email address and we’ll send a link to reset your password</p> -->
 <form (ngSubmit)="submit()" #requestPassForm="ngForm" aria-labelledby="title">
 
   <div class="form-control-group mb-4">
-    <label class="label m-0" for="input-email">Enter your email address:</label>
+    <label class="label m-0" for="input-email">{{'kEmailAddress' | translate}}:</label>
     <input nbInput
            [(ngModel)]="user.email"
            #email="ngModel"
            id="input-email"
            name="email"
            pattern=".+@.+\..+"
-           placeholder="Email address"
+           placeholder="{{'kEmailAddress' | translate}}"
            autofocus
            fullWidth
            [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
@@ -24,7 +23,7 @@
            [attr.aria-invalid]="email.invalid && email.touched ? true : null">
     <ng-container *ngIf="email.invalid && email.touched">
       <p class="error-message" *ngIf="email.errors?.required">
-        Email is required!
+        {{'kEmailRequired' | translate}}
       </p>
     </ng-container>
   </div>
@@ -34,14 +33,14 @@
           status="success"
           [disabled]="submitted || !requestPassForm.valid"
           [class.btn-pulse]="submitted">
-    Request password
+          {{'kRequestPassword' | translate}}
   </button>
 </form>
 
 <section class="sign-in-or-up mt-1" aria-label="Sign in or sign up">
-  <p><a class="text-link" routerLink="../login">Back to Log In</a></p>
+  <p><a class="text-link" routerLink="../login"> {{'kBackToLogin' | translate}}</a></p>
   <!-- <p><a routerLink="../register" class="text-link">Register</a></p> -->
 </section>
 <p class="copyright text-center">
-  Version: {{version}}
+  {{'kVersion' | translate}}: {{version}}
 </p>
