fix: version added

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -41,6 +41,6 @@
   <p><a class="text-link" routerLink="../login"> {{'kBackToLogin' | translate}}</a></p>
   <!-- <p><a routerLink="../register" class="text-link">Register</a></p> -->
 </section>
-<p class="copyright text-center">
+<p class="copyright text-center caption">
   {{'kVersion' | translate}}: {{version}}
 </p>
