--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -61,6 +61,6 @@
 
 <section class="another-action" aria-label="Register">
   {{'kDontHaveAccount' | translate}}? <a class="text-link" routerLink="../register">{{'kRegister' | translate}}</a>
-  <p class="copyright text-center">
+  <p class="copyright text-center caption">
     {{'kVersion' | translate}}: {{version}}
 </p>
