--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large" style="overflow: auto" class="mb-0">
+<nb-card size="large" style="overflow: auto" class="mb-0" [nbSpinner]="isLoading">
     <nb-card-header>
         <div class="row">
             <div class="col-auto my-auto">{{'kTimeRange' | translate}}</div>
