--- a/src/app/pages/patients/vitals/chart/temperature/temperature.component.html
+++ b/src/app/pages/patients/vitals/chart/temperature/temperature.component.html
@@ -1,1 +1,6 @@
-<p>temperature works!</p>
+<p> Temperature </p>
+<div class="d-block">
+    <canvas baseChart width="400" height="150" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
+        [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins">
+    </canvas>
+</div>
