--- a/src/app/pages/patients/vitals/chart/weight/weight.component.html
+++ b/src/app/pages/patients/vitals/chart/weight/weight.component.html
@@ -1,4 +1,4 @@
-<p> Weight </p>
+<p class="subtitle">Weight</p>
 <div class="d-block">
     <canvas baseChart width="400" height="150" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
         [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins">
