feat: Added Glucose chart

--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -20,7 +20,7 @@
                     <app-blood-pressure [data]="chartInfo"></app-blood-pressure>
                 </ng-container>
                 <ng-container *ngSwitchCase="2">
-                    <app-glucose></app-glucose>
+                    <app-glucose [data]="chartInfo"></app-glucose>
                 </ng-container>
                 <ng-container *ngSwitchCase="3">
                     <p>SPo2 coming soon..</p>
