--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,6 +70,9 @@ nb-list-item {
 // .link back-link{
 //     display: none;
 // }
+.f-right{
+	float: right;
+}
 .navigation{
     display: none;
 }
