fix: button design

--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -59,7 +59,7 @@
         </nb-card-body>
         <nb-card-footer>
             <button nbButton status="primary" class="f-right" (click)="deleteRecord()">{{'kYes' | translate}}</button>
-            <button nbButton status="danger" class="f-right" (click)="close()">{{'kNo' | translate}}</button>
+            <button nbButton status="danger" class="f-right mx-3" (click)="close()">{{'kNo' | translate}}</button>
         </nb-card-footer>
     </nb-card>
 </ng-template>
