--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -52,10 +52,10 @@
 <ng-template #deleteDialog>
     <nb-card class="dialog-card">
         <nb-card-header>
-            <h6 class="text-center">Delete </h6>
+            <h6 class="text-center">{{'kDelete'| translate}} </h6>
         </nb-card-header>
         <nb-card-body>
-            <p>Are you sure you want to delete Caregiver?</p>
+            <p>{{'KDeleteCaregiver' | translate}}</p>
         </nb-card-body>
         <nb-card-footer>
             <button nbButton status="primary" class="f-right" (click)="deleteRecord()">{{'kYes' | translate}}</button>
