--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -33,7 +33,7 @@
                 [ngClass]="{'none': user.monitored == 0,'success': user.alarm == 0 && user.monitored == 1, 'warning': user.alarm == 1 && user.monitored == 1, 'danger': user.alarm == 2 && user.monitored == 1}"
                 [name]="user.name" [title]="user.dob" [picture]="user.imageUrl">
             </nb-user>
-            <nb-icon nbTooltip="Edit" nbTooltipStatus="primary" icon="edit-outline" (click)="addPatient(user?.patientID);$event.stopPropagation();"></nb-icon>
+            <nb-icon nbTooltip="Edit" icon="edit-outline" (click)="addPatient(user?.patientID);$event.stopPropagation();"></nb-icon>
         </nb-list-item>
         <nb-list-item *ngIf="!users?.length">
             <p>{{'kNoPatientFound' | translate}} <a (click)="addPatient()">{{'kCreateNewPatient' | translate}}</a></p>
