feat: Added lables

--- a/src/app/pages/patients/vitals/chart/blood-pressure/blood-pressure.component.html
+++ b/src/app/pages/patients/vitals/chart/blood-pressure/blood-pressure.component.html
@@ -1,6 +1,6 @@
 <p class="subtitle"> Blood Pressure</p>
 <div class="d-block">
-    <canvas baseChart width="400" height="150" [datasets]="lineChartData" [labels]="lineChartLabels"
+    <canvas baseChart width="400" height="150" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
         [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" [plugins]="lineChartPlugins">
     </canvas>
 </div>
