fix: profile info

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -17,7 +17,7 @@
                 </p>
                 <p>
                     <nb-icon icon="email-outline" nbTooltip="Email" nbTooltipPlacement="left"></nb-icon>
-                    <span class="ps-4">{{patient?.phoneNumber}}</span>
+                    <span class="ps-4">{{patient?.email}}</span>
                 </p>
                 <div [ngSwitch]="patient?.gender">
                     <p *ngSwitchCase="0">
