--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -34,7 +34,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-md-5 mt-3">
+            <div class="col-md-3 mt-3">
                 <div>
                     <div class="d-flex">
                         <nb-icon icon="map-marker-alt" nbTooltip="Location" nbTooltipPlacement="left" pack="font-awesome">
@@ -55,6 +55,16 @@
                     </p>
                 </div>
             </div>
+            <div class="col-md-2 mt-3">
+                <button nbButton status="primary" class="mx-3 mb-2 p-2">Chart</button>
+                <button nbButton  [nbPopover]="templateRef" nbPopoverPlacement="right" status="primary" class="mx-3 mb-2 p-2">Call</button>
+                <button nbButton status="primary" class="mx-3 mb-2 p-2">Schedule</button>
+            </div> 
+            <ng-template #templateRef>
+                <button nbButton class="mx-2 mb-2">Audio</button>
+                <button nbButton class="mx-2 mb-2">Video</button>
+                <button nbButton class="mx-2 mb-2">Call Bridge</button>
+              </ng-template>
         </div>
     </nb-card-body>
 </nb-card>
